fix: 🐛 Border and Alignment fixes

--- a/src/styles/sheets/_monster.scss
+++ b/src/styles/sheets/_monster.scss
@@ -34,23 +34,19 @@
 	background: radial-gradient(closest-side, var(--color-highlight) 0%, transparent 100%);
 	flex: 0 0 auto;
 	height: 95px;
-	margin-right: 8px;
 	width: 95px;
-	padding: 0 0.25em;
 }
 
 .forbidden-lands .monster .bio .avatar img {
 	border: 0 none;
 	display: block;
-
-	max-width: 95px;
-	max-height: 95px;
+	place-self: center;
+	max-width: 100%;
+	max-height: 100%;
 	min-width: 20px;
 	min-height: 20px;
-	margin: auto;
-	margin-left: 5px;
 }
-.forbidden-lands .monster .bio .avatar img:hover {
+.forbidden-lands .monster .bio .avatar:hover {
 	box-shadow: 0 0 10px #a00;
 	cursor: pointer;
 }
