--- a/src/styles/system/_main.scss
+++ b/src/styles/system/_main.scss
@@ -7,7 +7,7 @@
 .chargen-build,
 .character div.actions.border {
 	border: 6px solid transparent;
-	border-image: url(../assets/journal-art/small-border.webp) 70/12px repeat;
+	border-image: url(../assets/journal-art/small-border.webp) 100/10px repeat;;
 }
 
 .forbidden-lands.sheet label {
